# pirahansiah.github.io

./: .gitignore  .gitmodules  .jekyll-metadata  404.md  Ads.txt  CNAME  Gemfile  LICENSE  MIGRATION.md  README.md  _config.yml  ads.txt  config.backup  cv.md  farshid-ai-cv-llm-content.md  farshid-ai-cv-llm-graph-tags.md  farshid-ai-cv-llm-graph.md  farshid-ai-cv-llm-view.md  farshid.md  feed.xml  frontmatter.json  graph-tags.md  graph.md  index.html  index.md  privacy.md  qr.md  resume.md  robots.txt  run.sh  search.md  sitemap.xml  tiziran.txt  view.md
src/cpp/: CMakeCache.txt  CMakeLists-.txt  CMakeLists.txt  Makefile  Makefile-  _doc.cpp  a.out  cmake_install.cmake  compile_commands.json  f  farshid.cpp  farshid.out  fp1.cpp  fp1.out  init.py  list_cpp.md  main  main.cpp  main.out  version.cpp  version.out
src/cpp/code1/: CMakeLists copy.txt  e  how.md  premake5.lua
src/cpp/farshid.out.dSYM/Contents/: Info.plist
src/cpp/farshid_OpenCV_CPP_macos/: CMakeLists.txt  Generate_Project_structure_CPP_Macos.sh
src/cpp/farshid_OpenCV_CPP_macos/src/: CMakeLists.txt
src/cpp/farshid_OpenCV_CPP_macos/src/farshid_OpenCV_CPP_macos/: main.cpp  main.out
src/cpp/farshid_OpenCV_CPP_macos/tests/: CMakeLists.txt  test_tools.cpp
src/cpp/fp1.out.dSYM/Contents/: Info.plist
src/cpp/fp1.out.dSYM/Contents/Resources/DWARF/: fp1.out
src/cpp/include/: network.h
src/cpp/main.out.dSYM/Contents/Resources/DWARF/: main.out
src/cpp/src/: a.out  pytorchCPP.cpp  your_program
src/cpp/src/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/cpp/version.out.dSYM/Contents/: Info.plist
(+517 files in other folders)
