
cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(pytorchCPP)
set(CMAKE_PREFIX_PATH "/Users/farshid/farshid/2024/libtorch")
set(CMAKE_CXX_STANDARD 17)
find_package(Torch REQUIRED)
add_executable(pytorchCPP src/pytorchCPP.cpp)
target_include_directories(pytorchCPP PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(pytorchCPP "${TORCH_LIBRARIES}")
if(APPLE AND ${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
  target_compile_options(pytorchCPP PRIVATE -stdlib=libc++)
endif()
message(STATUS "Torch status:")
message(STATUS " libraries: ${TORCH_LIBRARIES}")
